--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
